--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,5 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/test_button_string" >
+    </Button>
+
 </LinearLayout>
