--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -3,6 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/splash_desc"
+        android:src="@drawable/splash1" />
 
 </LinearLayout>
